--- a/app/views/Home/index.html
+++ b/app/views/Home/index.html
@@ -23,12 +23,14 @@
 		<div class="row-fluid">
 			<div class="span12">
 				<div id="top_bar" class="row-fluid">
+					<!-- top bar -->
 					<div class="span12">#{include 'tags/top_bar.html'/}</div>
 				</div>
 			</div>
 		</div>
 		<div class="row-fluid">
 			<div class="span3">
+				<!-- left menu -->
 				<div id="Z_TypeList" class="Z_TypeList Z_TypeList1">
 					<h1 class="title">所有商品分类</h1>
 					<div class="Z_MenuList">
@@ -47,6 +49,7 @@
 			</div>
 			<div class="span9" style="margin-left:238px;width:auto;height:1500px;">
 				<!-- <div style="height:1px;overflow:hidden;"></div> -->
+				<!-- main content -->
 				<div id="Z_RightSide" class="sidebar">
 					<script>
 	                    load('#Z_RightSide', '/maincontent');
@@ -55,38 +58,7 @@
 			</div>
 		</div>
 	</div>
-
-	<!-- top bar -->
-	*{
-	<div id="top_bar" class="span12">
-		<div class="wrapper">#{include 'tags/top_bar.html'/}</div>
-	</div>
-	<div class="span9 yourweb_container">
-		<div style="height: 60px; overflow: hidden;"></div>
-		<div id="Z_RightSide" class="sidebar">
-			<script>
-                load('#Z_RightSide', '/maincontent');
-            </script>
-		</div>
-	</div>
-	<!--yourweb_container end-->
-
-	<div id="Z_TypeList" class="span3 Z_TypeList">
-		<h1 class="title">所有商品分类</h1>
-		<div class="Z_MenuList">
-			<ul>
-				<script>
-                    load('.Z_MenuList ul', '/topclass');
-                </script>
-			</ul>
-		</div>
-		<div class="Z_SubList">
-			<script>
-                load('.Z_SubList', '/allclass');
-            </script>
-		</div>
-	</div>
-	}*
+	
 	<!--[if IE 6]>
 	<script type="text/javascript" src="/public/lib/tmailsider/js/DD_belatedPNG.js"></script>
 	<script type="text/javascript">
