--- a/app/views/Home/index.html
+++ b/app/views/Home/index.html
@@ -45,9 +45,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="span9" style="margin-left:238px;width:auto;height:1500px;">
+			<div class="span9" style="margin-left:238px;width:auto;min-width:82.5%;height:1500px;">
 				<!-- <div style="height:1px;overflow:hidden;"></div> -->
-				<div id="Z_RightSide" class="sidebar">
+				<div id="Z_RightSide" class="sidebar" style="min-width:100%;">
 					<script>
 	                    load('#Z_RightSide', '/maincontent');
 	                </script>
