--- a/app/views/Home/mainContent.html
+++ b/app/views/Home/mainContent.html
@@ -114,19 +114,14 @@
 				</div>
 
 
-				<a href="http://www.tmall.com/go/act/sale/smhxb.php?spm=3.359242.295813.15" class="floorCon-banner j_floorBanner" title="奢美汇"
-					target="_blank"> <img src="http://img04.taobaocdn.com/tps/i4/T1XZyHXAVbXXXHoWL4-200-300.jpg_q90.jpg" width="200" height="300"
-					alt="奢美汇">
+				<a href="" class="floorCon-banner j_floorBanner" title="奢美汇" 	target="_blank"> 
+					<img src="http://img04.taobaocdn.com/tps/i4/T1XZyHXAVbXXXHoWL4-200-300.jpg_q90.jpg" width="161" height="300" alt="奢美汇">
 				</a> 
-				<a
-					href="http://list.tmall.com/search_product.htm?spm=3.359242.295813.16&amp;start_price=800&amp;end_price=&amp;miaosha=1&amp;zk_type=0&amp;search_condition=23&amp;cat=50108176&amp;prop=22340%3A46499&amp;sort=s&amp;style=g&amp;vmarket=0&amp;from=sn_1_prop&amp;active=1&amp;q="
-					class="floorCon-banner j_floorBanner" title="表" target="_blank"> <img
-					src="http://img04.taobaocdn.com/tps/i4/T1F1SWXsNdXXXHoWL4-200-300.jpg_q90.jpg" width="200" height="300" alt="表">
+				<a href="" class="floorCon-banner j_floorBanner" title="表" target="_blank"> 
+					<img src="http://img04.taobaocdn.com/tps/i4/T1F1SWXsNdXXXHoWL4-200-300.jpg_q90.jpg" width="161" height="300" alt="表">
 				</a>
-				<a
-					href="http://list.tmall.com/search_product.htm?spm=3.359242.295813.16&amp;start_price=800&amp;end_price=&amp;miaosha=1&amp;zk_type=0&amp;search_condition=23&amp;cat=50108176&amp;prop=22340%3A46499&amp;sort=s&amp;style=g&amp;vmarket=0&amp;from=sn_1_prop&amp;active=1&amp;q="
-					class="floorCon-banner j_floorBanner" title="表" target="_blank"> <img
-					src="http://img04.taobaocdn.com/tps/i4/T1F1SWXsNdXXXHoWL4-200-300.jpg_q90.jpg" width="200" height="300" alt="表">
+				<a href="" class="floorCon-banner j_floorBanner" title="表" target="_blank"> 
+					<img src="http://img04.taobaocdn.com/tps/i4/T1F1SWXsNdXXXHoWL4-200-300.jpg_q90.jpg" width="161" height="300" alt="表">
 				</a>
 			</div>
 		</div>
