--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,7 +3,7 @@
 }
 
 .floor {
-	width: 950px;
+	width: auto;
 	height: 358px;
 	clear: both;
 	margin-bottom: 10px;
@@ -80,7 +80,7 @@ a {
 .floorCon {
 	height: 320px;
 	overflow: hidden;
-	width: 970px;
+	width: auto;
 }
 
 .headerCon,.clearfix {
@@ -254,4 +254,3 @@ fieldset,img {
 }
 
 .Z_MenuList ul,.Z_MenuList p{margin:0;}
-.container-fluid{}
