--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,7 +68,7 @@ form .msg_box label {
 	background:#f7f7f7;
 }
 .headerTopArea .headerTop {
-	width:980px;
+	width:auto;
 	height:31px;
 	line-height:32px;
 	margin:0 106px;
